--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ build_and_push_to_docker_hub:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/infra:latest
+          tags: redbull7214/infra:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
