--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,9 +64,9 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
         script: |
-          sudo docker pull redbull7214/infra
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 redbull7214/infra     
+          sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/infra     
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
